--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,16 @@
     font-family: Motiva;
     text-shadow: 2px 2px 4px #000000;
 }
+
+.completionist-container{
+    display: block;
+}
+
+@media only screen and (min-width: 528px) {
+    .completionist-container{
+        display: flex;
+        column-gap: 10px;
+        justify-content: center;
+    }
+}
+
